styled out header and sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script src="https://use.fontawesome.com/8af0201293.js"></script>
   </head>
   <body>
     <div id="react-mount" class="main"></div>
