styling out issues. Adding in better versions of menu buttons

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script src="https://use.fontawesome.com/8af0201293.js"></script>
+    <script src="https://use.typekit.net/xxh7pwo.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
   <body>
     <div id="react-mount" class="main"></div>
